# hackDuke2025

./: .gitignore  BRANCH_SETUP.md  README.md
.github/: copilot-instructions.md
AI Self-Reflection Coach/: package.json
AI Self-Reflection Coach/src/: App.tsx
AI Self-Reflection Coach/src/lib/: mockData.ts
backend/: .dockerignore  .env.example  Dockerfile  interactive_demo.py  package-lock.json  package.json  pyproject.toml  quick_test.py  requirements.txt  start.sh
backend/persona_reflect/: __init__.py  main.py
backend/persona_reflect/agents/: __init__.py  cognitive_behavioral.py  empathetic_friend.py  mindfulness_mentor.py  orchestrator.py  rational_analyst.py
backend/persona_reflect/agents/controllers/: scheduler.py
backend/persona_reflect/prompts/: __init__.py  personas.py
backend/persona_reflect/services/: __init__.py  gcal_demo.py
backend/persona_reflect/tools/: __init__.py  calendar_tools.py
fastapi/: app.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: EntryDetail.tsx  JournalInput.tsx  PersonaCard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
models/speechemo/: requirements.txt  test.py
