[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-reflect"
version = "1.0.0"
description = "Multi-agent AI coaching system using Google ADK"
authors = [
    {name = "HackDuke 2025 Team", email = "team@hackduke.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[project.scripts]
persona-reflect = "persona_reflect.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["persona_reflect*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
